# traductoresLenguaje2

./: CMakeLists.txt  code.c  gramatica.txt
01_analizador_lexico/: input.txt  main.cpp  main.py
01_analizador_lexico/include/: lexico.hpp
01_analizador_lexico/src/: main.cpp
02_validar_cadenas/: main.py  xd.py
03_sintactico/: main.py
03_sintactico/include/: lexico.hpp  sintactico.hpp
03_sintactico/src/: lexico.cpp  main.cpp  sintactico.cpp
04_semantico/: main.py
04_semantico/include/: generic.hpp  lexico.hpp  semantico.hpp  sintactico.hpp
04_semantico/src/: generic.cpp  lexico.cpp  main.cpp  semantico.cpp  sintactico.cpp
05_generador/: TEMP  main.py  prueba.txt  salida.txt
05_generador/include/: genera.hpp  lexico.hpp  list.hpp  node.hpp  sintactico.hpp
05_generador/src/: genera.cpp  lexico.cpp  main.cpp  sintactico.cpp
