cmake_minimum_required(VERSION 3.27)
project(semSistemasOperativos LANGUAGES CXX)

if (UNIX)
	set(CMAKE_CXX_COMPILER g++-13)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-Wall -pedantic -Wextra)
set(pybind11_DIR "C:/Program Files/Python311/Lib/site-packages/pybind11/share/cmake/pybind11")
find_package(pybind11 REQUIRED)

function(add_program TARGET_NAME)
	file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/src/*.cpp")
	add_executable(${TARGET_NAME} ${SOURCES})
	target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/include" "C:/Program Files/Python311/include")
endfunction()

function(add_python_lib TARGET_NAME LIB_NAME)
	file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/src/*.cpp")
	pybind11_add_module(${LIB_NAME} ${SOURCES})
	target_compile_definitions(${LIB_NAME} PRIVATE PYTHON_LIB)
	target_include_directories(${LIB_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/include")
	target_link_directories(${LIB_NAME} PRIVATE "C:/Program Files/Python311/libs")
	target_link_libraries(${LIB_NAME} PRIVATE python311 -static)
endfunction()

add_python_lib(01_analizador_lexico lexico)
add_program(03_sintactico)
add_python_lib(03_sintactico sintactico)
add_program(04_semantico)
add_python_lib(04_semantico semantico)
